# task-manager

./: README.md  pyproject.toml
config/: settings.py  urls.py
tasks/: apps.py  db.py  insert_tasks.py  models.py  serializers.py  urls.py  views.py
